# alancoin

./: .dockerignore  .env.example  .gitignore  .golangci.yml  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  fly.toml  go.mod  go.sum
.github/workflows/: ci.yml
api/: openapi.yaml
cmd/mcp/: main.go
cmd/migrate/: main.go
cmd/server/: main.go
dashboard/: .env.production.example  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
dashboard/src/: index.css  main.tsx  router.tsx
deploy/prometheus/: prometheus.yml  rules.yml
docs/: api-reference.md  architecture.md  deployment.md  observability.md  sdks.md  security.md  session-keys.md
examples/: demo_delegation.py  demo_e2e.py  demo_pipeline.py  simple_mcp_server.py
examples/agents/: echo.py  translator.py
examples/go-agent/: go.mod  main.go
experiments/: Dockerfile  README.md  docker-compose.yml  integration_test.py  pyproject.toml  requirements.txt  run.py  run_studies.py  smoke_test.py
experiments/configs/: base.yaml  pre_study.yaml  study1.yaml  study2.yaml
experiments/harness/: __init__.py  manifest.py  requirements.txt
experiments/harness/adversaries/: __init__.py  bait_and_switch.py  base.py  injection_seller.py  non_deliverer.py  overcharger.py  reputation_manipulator.py
experiments/harness/agents/: __init__.py  base.py  buyer.py  seller.py
experiments/harness/agents/prompts/: buyer_cost_oriented.txt  buyer_minimal.txt  buyer_system.txt  seller_minimal.txt  seller_system.txt
experiments/harness/agents/providers/: __init__.py  anthropic.py  base.py  mock.py  openai.py  together.py
experiments/harness/analysis/: __init__.py  dose_response.py  figures.py  latex_export.py  metrics.py  statistics.py  trace_analysis.py
experiments/harness/clients/: __init__.py  async_wrapper.py  gateway_market.py  market_backend.py  mock_market.py
experiments/harness/config/: __init__.py  loader.py  schema.py
experiments/harness/logging/: __init__.py  cost_tracker.py  events.py  structured_logger.py
experiments/harness/market/: __init__.py  counterbalancing.py  delivery.py  negotiation.py  orchestrator.py  tasks.py
experiments/harness/runners/: __init__.py  pre_study.py  study1.py  study2.py  study3.py
experiments/sandbox/: Dockerfile  __init__.py  __main__.py  app.py  auth.py  estimator.py  events.py  jobs.py  models.py  reports.py  scenarios.py  test_sandbox.py
experiments/tests/: __init__.py  test_agents.py  test_config.py  test_cost_tracker.py  test_cost_tracker_failures.py  test_gateway_failures.py  test_mock_market.py  test_statistics.py
internal/admin/: admin.go  handlers.go  handlers_test.go
internal/arbitration/: arbitration.go  arbitration_test.go  handlers.go  handlers_test.go  memory_store.go  postgres_store.go
internal/auth/: auth.go  auth_test.go  handlers.go  handlers_test.go  middleware.go  middleware_test.go  postgres_store.go
internal/billing/: billing.go  handlers.go  handlers_test.go  meter.go  meter_test.go  noop.go  noop_test.go  stripe.go  webhook.go  webhook_test.go
internal/cache/: redis.go  redis_test.go
internal/chargeback/: chargeback.go  chargeback_test.go  handlers.go  handlers_test.go  memory_store.go  postgres_store.go
internal/circuitbreaker/: breaker.go  breaker_test.go  redis_breaker.go  redis_breaker_test.go
internal/commentary/: commentary.go  commentary_test.go  handlers.go  memory_store.go  postgres_store.go
internal/compliance/: compliance.go  compliance_test.go  handlers.go  memory_store.go  service.go  webhooks_test.go
internal/config/: config.go  config_test.go
internal/contracts/: contracts.go  contracts_test.go  coverage_extra_test.go  handlers.go  memory_store.go  postgres_store.go  postgres_store_test.go  service.go  timer.go
internal/credit/: credit.go  credit_test.go  handlers.go  handlers_test.go  scorer.go  (+5 more)
migrations/: 001_initial_schema.sql  002_numeric_balances.sql  003_escrow.sql  004_add_missing_indexes.sql  005_credit.sql  006_delegation.sql  007_contracts.sql  008_streams.sql  009_reputation_snapshots.sql  010_negotiations.sql  011_stakes.sql  012_discovery_matview.sql  013_partition_transactions.sql  014_ledger_events.sql  015_audit_log.sql  016_reversals.sql  017_balance_alerts.sql  018_multi_currency.sql  019_negotiation_bonds.sql  020_negotiation_multi_sealed.sql  021_escrow_arbitration.sql  022_session_key_policies.sql  023_risk_scoring.sql  024_key_rotation.sql  025_verified_agents.sql  026_receipts.sql  027_multistep_escrow.sql  028_delegation_audit.sql  029_session_key_scopes.sql  030_escrow_templates.sql  030_gateway_sessions.sql  031_supervisor_baselines.sql  032_tenants.sql  033_gateway_fee.sql  034_spend_policies.sql  035_shadow_mode.sql  036_gateway_rpm_and_indexes.sql  037_composite_indexes.sql  038_delegation_depth_check.sql  039_stripe_billing.sql  (+26 more)
scripts/: check-balance.sh  demo-launcher.sh  demo.py  deploy.sh  seed.sh  setup-db.sh  stub_provider.py
sdks/python/: README.md  pyproject.toml
sdks/python/alancoin/: __init__.py  _connect.py  admin.py  client.py  exceptions.py  invest.py  mcp_proxy.py  models.py  realtime.py  serve.py  session.py  session_keys.py  sessions.py  wallet.py
sdks/python/alancoin/agents/: __init__.py  _audit.py  _demo.py  _guard.py  crewai.py  langgraph.py  openai_agents.py
sdks/python/examples/: agent_to_agent.py  crewai_budget.py  full_demo.py  langgraph_budget.py  session_key_demo.py
sdks/python/examples/verbal_agents/: market_watcher.py  sentinel.py
sdks/python/tests/: __init__.py  test_budget_and_errors.py  test_budget_guard.py  test_client.py  test_crewai.py  test_gateway_session.py  test_langgraph.py  test_offers.py  test_openai_agents.py  test_realtime.py  test_sdk_pivot.py
(+585 files in other folders)
