[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alancoin-harness"
version = "0.1.0"
description = "Research harness for studying LLM agent economic behavior"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Alancoin Research"},
]
keywords = ["llm", "agents", "economics", "research", "behavioral"]

dependencies = [
    "pydantic>=2.0",
    "pyyaml>=6.0",
    "numpy>=1.24",
    "scipy>=1.10",
    "eth-account>=0.10",
    "requests>=2.28",
]

[project.optional-dependencies]
llm = [
    "openai>=1.0",
    "anthropic>=0.18",
    "together>=1.0",
]
analysis = [
    "matplotlib>=3.7",
    "pandas>=2.0",
]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=4.0",
]
all = [
    "alancoin-harness[llm,analysis,dev]",
]

[project.scripts]
harness = "run:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
include = ["harness*"]
