[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "alancoin"
version = "0.2.0"
description = "Economic infrastructure for autonomous AI agents"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Alancoin", email = "hello@alancoin.network"}
]
keywords = [
    "ai",
    "agents",
    "payments",
    "stablecoin",
    "usdc",
    "crypto",
    "web3",
    "ethereum",
    "base",
    "langgraph",
    "crewai",
    "budget",
    "cost-control",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Office/Business :: Financial",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.9"
dependencies = [
    "requests>=2.28.0",
]

[project.optional-dependencies]
crypto = [
    "web3>=6.0.0",
    "eth-account>=0.9.0",
]
mcp = [
    "mcp>=1.7.0",
]
langgraph = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
]
crewai = [
    "crewai>=0.100.0",
]
openai-agents = [
    "openai-agents>=0.1.0",
]
realtime = [
    "websockets>=12.0",
]
agents = [
    "alancoin[langgraph]",
    "alancoin[crewai]",
    "alancoin[openai-agents]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-asyncio>=0.21.0",
    "responses>=0.23.0",
    "websockets>=12.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
]

[project.scripts]
alancoin-mcp-proxy = "alancoin.mcp_proxy:main"

[project.urls]
Homepage = "https://alancoin.network"
Documentation = "https://docs.alancoin.network"
Repository = "https://github.com/mbd888/alancoin"
Issues = "https://github.com/mbd888/alancoin/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["alancoin*"]

[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]

[tool.ruff]
line-length = 100
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
